@@ -18,11 +18,11 @@ import io.kestra.core.models.flows.input.StringInput;
 import io.kestra.core.models.tasks.common.EncryptedString;
 import io.kestra.core.models.triggers.AbstractTrigger;
 import io.kestra.core.models.triggers.PollingTriggerInterface;
+import io.kestra.core.models.triggers.Trigger;
 import io.kestra.core.models.triggers.TriggerContext;
 import io.kestra.core.queues.QueueFactoryInterface;
 import io.kestra.core.queues.QueueInterface;
 import io.kestra.core.storages.StorageInterface;
-import io.kestra.core.tasks.test.PollingTrigger;
 import io.kestra.core.tasks.test.SleepTrigger;
 import io.kestra.core.utils.IdUtils;
 import io.kestra.core.utils.TestsUtils;
@@ -40,6 +40,7 @@ import lombok.experimental.SuperBuilder;
 import org.exparity.hamcrest.date.ZonedDateTimeMatchers;
 import org.junit.jupiter.api.Test;
 import org.slf4j.event.Level;
+import reactor.core.publisher.Flux;
 
 import java.io.IOException;
 import java.net.URI;
@@ -56,7 +57,6 @@ import java.util.concurrent.TimeoutException;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @Property(name = "kestra.tasks.tmp-dir.path", value = "/tmp/sub/dir/tmp/")
 class RunContextTest extends AbstractMemoryRunnerTest {
@@ -68,10 +68,13 @@ class RunContextTest extends AbstractMemoryRunnerTest {
     QueueInterface<LogEntry> workerTaskLogQueue;
 
     @Inject
-    TaskDefaultsCaseTest taskDefaultsCaseTest;
+    PluginDefaultsCaseTest pluginDefaultsCaseTest;
 
     @Inject
     RunContextFactory runContextFactory;
+
+    @Inject
+    RunContextInitializer runContextInitializer;
 
     @Inject
     StorageInterface storageInterface;
@@ -86,17 +89,20 @@ class RunContextTest extends AbstractMemoryRunnerTest {
     @Named(QueueFactoryInterface.WORKERTASKLOG_NAMED)
     private QueueInterface<LogEntry> logQueue;
 
+    @Inject
+    private FlowInputOutput flowIO;
+
     @Test
     void logs() throws TimeoutException {
         List<LogEntry> logs = new CopyOnWriteArrayList<>();
         LogEntry matchingLog;
-        workerTaskLogQueue.receive(either -> logs.add(either.getLeft()));
+        Flux<LogEntry> receive = TestsUtils.receive(workerTaskLogQueue, either -> logs.add(either.getLeft()));
 
         Execution execution = runnerUtils.runOne(null, "io.kestra.tests", "logs");
 
         assertThat(execution.getTaskRunList(), hasSize(5));
 
-        matchingLog = TestsUtils.awaitLog(logs, log -> Objects.equals(log.getTaskRunId(), execution.getTaskRunList().get(0).getId()));
+        matchingLog = TestsUtils.awaitLog(logs, log -> Objects.equals(log.getTaskRunId(), execution.getTaskRunList().getFirst().getId()));
         assertThat(matchingLog, notNullValue());
         assertThat(matchingLog.getLevel(), is(Level.TRACE));
         assertThat(matchingLog.getMessage(), is("first t1"));
@@ -104,7 +110,7 @@ class RunContextTest extends AbstractMemoryRunnerTest {
         matchingLog = TestsUtils.awaitLog(logs, log -> Objects.equals(log.getTaskRunId(), execution.getTaskRunList().get(1).getId()));
         assertThat(matchingLog, notNullValue());
         assertThat(matchingLog.getLevel(), is(Level.WARN));
-        assertThat(matchingLog.getMessage(), is("second io.kestra.core.tasks.log.Log"));
+        assertThat(matchingLog.getMessage(), is("second io.kestra.plugin.core.log.Log"));
 
         matchingLog = TestsUtils.awaitLog(logs, log -> Objects.equals(log.getTaskRunId(), execution.getTaskRunList().get(2).getId()));
         assertThat(matchingLog, notNullValue());
@@ -112,13 +118,14 @@ class RunContextTest extends AbstractMemoryRunnerTest {
         assertThat(matchingLog.getMessage(), is("third logs"));
 
         matchingLog = TestsUtils.awaitLog(logs, log -> Objects.equals(log.getTaskRunId(), execution.getTaskRunList().get(3).getId()));
+        receive.blockLast();
         assertThat(matchingLog, nullValue());
     }
 
     @Test
     void inputsLarge() throws TimeoutException {
         List<LogEntry> logs = new CopyOnWriteArrayList<>();
-        workerTaskLogQueue.receive(either -> logs.add(either.getLeft()));
+        Flux<LogEntry> receive = TestsUtils.receive(workerTaskLogQueue, either -> logs.add(either.getLeft()));
 
         char[] chars = new char[1024 * 11];
         Arrays.fill(chars, 'a');
@@ -131,17 +138,18 @@ class RunContextTest extends AbstractMemoryRunnerTest {
             "io.kestra.tests",
             "inputs-large",
             null,
-            (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs)
+            (flow, execution1) -> flowIO.typedInputs(flow, execution1, inputs)
         );
 
         assertThat(execution.getTaskRunList(), hasSize(10));
         assertThat(execution.getState().getCurrent(), is(State.Type.SUCCESS));
-        assertThat(execution.getTaskRunList().get(0).getState().getCurrent(), is(State.Type.SUCCESS));
+        assertThat(execution.getTaskRunList().getFirst().getState().getCurrent(), is(State.Type.SUCCESS));
 
         List<LogEntry> logEntries = TestsUtils.awaitLogs(logs, logEntry -> logEntry.getTaskRunId() != null && logEntry.getTaskRunId().equals(execution.getTaskRunList().get(1).getId()), count -> count > 1);
+        receive.blockLast();
         logEntries.sort(Comparator.comparingLong(value -> value.getTimestamp().toEpochMilli()));
 
-        assertThat(logEntries.get(0).getTimestamp().toEpochMilli() + 1, is(logEntries.get(1).getTimestamp().toEpochMilli()));
+        assertThat(logEntries.getFirst().getTimestamp().toEpochMilli() + 1, is(logEntries.get(1).getTimestamp().toEpochMilli()));
     }
 
     @Test
@@ -151,7 +159,7 @@ class RunContextTest extends AbstractMemoryRunnerTest {
         assertThat(execution.getTaskRunList(), hasSize(3));
 
         assertThat(
-            ZonedDateTime.from(ZonedDateTime.parse((String) execution.getTaskRunList().get(0).getOutputs().get("value"))),
+            ZonedDateTime.from(ZonedDateTime.parse((String) execution.getTaskRunList().getFirst().getOutputs().get("value"))),
             ZonedDateTimeMatchers.within(10, ChronoUnit.SECONDS, ZonedDateTime.now())
         );
         assertThat(execution.getTaskRunList().get(1).getOutputs().get("value"), is("task-id"));
@@ -160,26 +168,18 @@ class RunContextTest extends AbstractMemoryRunnerTest {
 
     @Test
     void taskDefaults() throws TimeoutException, IOException, URISyntaxException {
-        repositoryLoader.load(Objects.requireNonNull(ListenersTest.class.getClassLoader().getResource("flows/tests/task-defaults.yaml")));
-        taskDefaultsCaseTest.taskDefaults();
-    }
-
-    @Test
-    void tempFiles() throws IOException {
-        RunContext runContext = runContextFactory.of();
-        Path path = runContext.tempFile();
-
-        assertThat(path.toFile().getAbsolutePath().startsWith("/tmp/sub/dir/tmp/"), is(true));
+        repositoryLoader.load(Objects.requireNonNull(ListenersTest.class.getClassLoader().getResource("flows/tests/plugin-defaults.yaml")));
+        pluginDefaultsCaseTest.taskDefaults();
     }
 
     @Test
     void largeInput() throws IOException, InterruptedException {
         RunContext runContext = runContextFactory.of();
-        Path path = runContext.tempFile();
+        Path path = runContext.workingDir().createTempFile();
 
         long size = 1024L * 1024 * 1024;
 
-        Process p = Runtime.getRuntime().exec(String.format("dd if=/dev/zero of=%s bs=1 count=1 seek=%s", path, size));
+        Process p = Runtime.getRuntime().exec(new String[] {"dd", "if=/dev/zero", String.format("of=%s", path), "bs=1", "count=1", String.format("seek=%s", size)});
         p.waitFor();
         p.destroy();
 
@@ -215,35 +215,6 @@ class RunContextTest extends AbstractMemoryRunnerTest {
     }
 
     @Test
-    void fileExtension() {
-        RunContext runContext = runContextFactory.of();
-
-        assertThat(runContext.fileExtension(null), nullValue());
-        assertThat(runContext.fileExtension(""), nullValue());
-        assertThat(runContext.fileExtension("/file/hello"), nullValue());
-        assertThat(runContext.fileExtension("/file/hello.txt"), is(".txt"));
-    }
-
-    @Test
-    void resolve() {
-        RunContext runContext = runContextFactory.of();
-        String baseDir = runContext.tempDir().toString();
-
-        Path path = runContext.resolve(Path.of("file.txt"));
-        assertThat(path.toString(), is(baseDir + "/file.txt"));
-
-        path = runContext.resolve(Path.of("subdir/file.txt"));
-        assertThat(path.toString(), is(baseDir + "/subdir/file.txt"));
-
-        path = runContext.resolve(null);
-        assertThat(path.toString(), is(baseDir));
-
-        assertThrows(IllegalArgumentException.class, () -> runContext.resolve(Path.of("/etc/passwd")));
-        assertThrows(IllegalArgumentException.class, () -> runContext.resolve(Path.of("../../etc/passwd")));
-        assertThrows(IllegalArgumentException.class, () -> runContext.resolve(Path.of("subdir/../../../etc/passwd")));
-    }
-
-    @Test
     void encrypt() throws GeneralSecurityException {
         // given
         RunContext runContext = runContextFactory.of();
@@ -256,19 +227,20 @@ class RunContextTest extends AbstractMemoryRunnerTest {
         assertThat(decrypted, is(plainText));
     }
 
+    @SuppressWarnings("unchecked")
     @Test
     void encryptedStringOutput() throws TimeoutException {
         Execution execution = runnerUtils.runOne(null, "io.kestra.tests", "encrypted-string");
 
         assertThat(execution.getState().getCurrent(), is(State.Type.SUCCESS));
         assertThat(execution.getTaskRunList(), hasSize(2));
-        TaskRun hello = execution.findTaskRunsByTaskId("hello").get(0);
+        TaskRun hello = execution.findTaskRunsByTaskId("hello").getFirst();
         Map<String, String> valueOutput = (Map<String, String>) hello.getOutputs().get("value");
         assertThat(valueOutput.size(), is(2));
         assertThat(valueOutput.get("type"), is(EncryptedString.TYPE));
         // the value is encrypted so it's not the plaintext value of the task property
         assertThat(valueOutput.get("value"), not("Hello World"));
-        TaskRun returnTask = execution.findTaskRunsByTaskId("return").get(0);
+        TaskRun returnTask = execution.findTaskRunsByTaskId("return").getFirst();
         // the output is automatically decrypted so the return has the decrypted value of the hello task output
         assertThat(returnTask.getOutputs().get("value"), is("Hello World"));
     }
@@ -315,7 +287,7 @@ class RunContextTest extends AbstractMemoryRunnerTest {
     void secretTrigger() throws IllegalVariableEvaluationException {
         List<LogEntry> logs = new CopyOnWriteArrayList<>();
         List<LogEntry> matchingLog;
-        logQueue.receive(either -> logs.add(either.getLeft()));
+        Flux<LogEntry> receive = TestsUtils.receive(logQueue, either -> logs.add(either.getLeft()));
 
         LogTrigger trigger = LogTrigger.builder()
             .type(SleepTrigger.class.getName())
@@ -323,7 +295,7 @@ class RunContextTest extends AbstractMemoryRunnerTest {
             .format("john {{ secret('PASSWORD') }} doe")
             .build();
 
-        Map.Entry<ConditionContext, TriggerContext> mockedTrigger = TestsUtils.mockTrigger(runContextFactory, trigger);
+        Map.Entry<ConditionContext, Trigger> mockedTrigger = TestsUtils.mockTrigger(runContextFactory, trigger);
 
         WorkerTrigger workerTrigger = WorkerTrigger.builder()
             .trigger(trigger)
@@ -331,13 +303,13 @@ class RunContextTest extends AbstractMemoryRunnerTest {
             .conditionContext(mockedTrigger.getKey())
             .build();
 
-        RunContext runContext = mockedTrigger.getKey().getRunContext().forWorker(applicationContext, workerTrigger);
-        Optional<Execution> evaluate = trigger.evaluate(mockedTrigger.getKey().withRunContext(runContext), mockedTrigger.getValue());
+        RunContext runContext = runContextInitializer.forWorker((DefaultRunContext) workerTrigger.getConditionContext().getRunContext(), workerTrigger);
+        trigger.evaluate(mockedTrigger.getKey().withRunContext(runContext), mockedTrigger.getValue());
 
         matchingLog = TestsUtils.awaitLogs(logs, 3);
-        assertThat(matchingLog.stream().filter(logEntry -> logEntry.getLevel().equals(Level.INFO)).findFirst().orElse(null).getMessage(), is("john ******** doe"));
+        receive.blockLast();
+        assertThat(Objects.requireNonNull(matchingLog.stream().filter(logEntry -> logEntry.getLevel().equals(Level.INFO)).findFirst().orElse(null)).getMessage(), is("john ******** doe"));
     }
-
 
     @SuperBuilder
     @ToString
