@@ -23,7 +23,6 @@ import io.micronaut.context.event.ApplicationEventPublisher;
 import io.micronaut.data.model.Pageable;
 import io.micronaut.inject.qualifiers.Qualifiers;
 import jakarta.annotation.Nullable;
-import jakarta.inject.Singleton;
 import lombok.SneakyThrows;
 import org.apache.commons.lang3.tuple.Pair;
 import org.jooq.Condition;
@@ -59,7 +58,6 @@ import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-@Singleton
 public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcRepository implements ExecutionRepositoryInterface, JdbcIndexerInterface<Execution> {
     protected final io.kestra.jdbc.AbstractJdbcRepository<Execution> jdbcRepository;
     private final ApplicationEventPublisher<CrudEvent<Execution>> eventPublisher;
@@ -120,7 +118,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
     }
 
     @Override
-    public Optional<Execution> findById(String tenantId, String id) {
+    public Optional<Execution> findById(String tenantId, String id, boolean allowDeleted) {
         return jdbcRepository
             .getDslContextWrapper()
             .transactionResult(configuration -> {
@@ -128,7 +126,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                     .using(configuration)
                     .select(field("value"))
                     .from(this.jdbcRepository.getTable())
-                    .where(this.defaultFilter(tenantId))
+                    .where(this.defaultFilter(tenantId, allowDeleted))
                     .and(field("key").eq(id));
 
                 return this.jdbcRepository.fetchOne(from);
@@ -139,7 +137,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
 
     protected Condition statesFilter(List<State.Type> state) {
         return field("state_current")
-            .in(state.stream().map(Enum::name).collect(Collectors.toList()));
+            .in(state.stream().map(Enum::name).toList());
     }
 
     @Override
@@ -172,7 +170,8 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                     state,
                     labels,
                     triggerExecutionId,
-                    childFilter
+                    childFilter,
+                    false
                 );
 
                 return this.jdbcRepository.fetchPage(context, select, pageable);
@@ -190,7 +189,8 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
         @Nullable List<State.Type> state,
         @Nullable Map<String, String> labels,
         @Nullable String triggerExecutionId,
-        @Nullable ChildFilter childFilter
+        @Nullable ChildFilter childFilter,
+        boolean deleted
     ) {
         return Flux.create(
             emitter -> this.jdbcRepository
@@ -209,7 +209,8 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                         state,
                         labels,
                         triggerExecutionId,
-                        childFilter
+                        childFilter,
+                        deleted
                     );
 
                     select.fetch()
@@ -233,7 +234,8 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
         @Nullable List<State.Type> state,
         @Nullable Map<String, String> labels,
         @Nullable String triggerExecutionId,
-        @Nullable ChildFilter childFilter
+        @Nullable ChildFilter childFilter,
+        boolean deleted
     ) {
         SelectConditionStep<Record1<Object>> select = context
             .select(
@@ -241,7 +243,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
             )
             .hint(context.configuration().dialect() == SQLDialect.MYSQL ? "SQL_CALC_FOUND_ROWS" : null)
             .from(this.jdbcRepository.getTable())
-            .where(this.defaultFilter(tenantId));
+            .where(this.defaultFilter(tenantId, deleted));
 
         select = filteringQuery(select, namespace, flowId, null, query, labels, triggerExecutionId, childFilter);
 
@@ -329,7 +331,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
 
         return dailyStatisticsQueryMapRecord(
             results.resultsOrRows()
-                .get(0)
+                .getFirst()
                 .result(),
             startDate,
             endDate,
@@ -368,7 +370,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
 
         return dailyStatisticsQueryMapRecord(
             results.resultsOrRows()
-                .get(0)
+                .getFirst()
                 .result(),
             startDate,
             endDate,
@@ -401,7 +403,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
             .stream()
             .map(dateResultEntry -> dailyExecutionStatisticsMap(dateResultEntry.getKey(), dateResultEntry.getValue(), groupByType.val()))
             .sorted(Comparator.comparing(DailyExecutionStatistics::getStartDate))
-            .collect(Collectors.toList()), startDate, endDate);
+            .toList(), startDate, endDate);
     }
 
     private Results dailyStatisticsQueryForAllTenants(
@@ -545,7 +547,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                     .map(e -> field("namespace").eq(e.getNamespace())
                         .and(field("flow_id").eq(e.getId()))
                     )
-                    .collect(Collectors.toList())
+                    .toList()
             ));
         }
 
@@ -586,7 +588,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
 
         return results
             .resultsOrRows()
-            .get(0)
+            .getFirst()
             .result()
             .intoGroups(field("namespace", String.class))
             .entrySet()
@@ -753,7 +755,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                             field("namespace").eq(flow.getNamespace()),
                             field("flow_id").eq(flow.getFlowId())
                         ))
-                        .collect(Collectors.toList())
+                        .toList()
                 ));
 
                 // map result to flow
@@ -764,7 +766,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                     ))
                     .fetchMany()
                     .resultsOrRows()
-                    .get(0)
+                    .getFirst()
                     .result()
                     .stream()
                     .map(record -> new ExecutionCount(
@@ -772,7 +774,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                         record.getValue("flow_id", String.class),
                         record.getValue("count", Long.class)
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
             });
 
         // fill missing with count at 0
@@ -790,7 +792,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                     0L
                 ))
             )
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<Execution> lastExecutions(
@@ -822,7 +824,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                                 field("namespace").eq(flow.getNamespace()),
                                 field("flow_id").eq(flow.getId())
                             ))
-                            .collect(Collectors.toList())
+                            .toList()
                     ));
 
                 Table<Record2<Object, Integer>> cte = subquery.asTable("cte");
